repast.simphony.relogo.ide/src/repast/simphony/relogo/ide/code/NetLogoRGWParser.java
// $ANTLR 3.0.1 C:\\projects\\netlogo\\grammars\\NetLogoRGW.g 2008-07-23 16:47:54

package repast.simphony.relogo.ide.code;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class NetLogoRGWParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "CS", "CB", "IDN", "STR", "BREED", "GLOBALS", "INCLUDES", "INUM", "FNUM", "OWN", "ToEndBlock", "ToReportBlock", "Paren", "ID", "STRING", "ARITHSYM", "INT", "FLOAT", "COMMENT", "NEWLINE", "WS", "'breed'", "'['", "']'", "'globals'", "'__includes'", "'to'", "'end'", "'to-report'", "'('", "')'"
    };
    public static final int ARITHSYM=20;
    public static final int GLOBALS=10;
    public static final int FNUM=13;
    public static final int CB=6;
    public static final int BREED=9;
    public static final int ToEndBlock=15;
    public static final int FLOAT=22;
    public static final int INT=21;
    public static final int ToReportBlock=16;
    public static final int ID=18;
    public static final int EOF=-1;
    public static final int IDN=7;
    public static final int INCLUDES=11;
    public static final int STR=8;
    public static final int WS=25;
    public static final int OWN=14;
    public static final int NEWLINE=24;
    public static final int CS=5;
    public static final int INUM=12;
    public static final int Paren=17;
    public static final int ARGS=4;
    public static final int COMMENT=23;
    public static final int STRING=19;

        public NetLogoRGWParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[35+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\projects\\netlogo\\grammars\\NetLogoRGW.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start prog
    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:35:1: prog : ( stat )* ;
    public final prog_return prog() throws RecognitionException {
        prog_return retval = new prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        stat_return stat1 = null;



        try {
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:35:6: ( ( stat )* )
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:35:8: ( stat )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:35:8: ( stat )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==26||(LA1_0>=29 && LA1_0<=31)||LA1_0==33) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:0:0: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_prog94);
            	    stat1=stat();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, stat1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end prog

    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start stat
    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:1: stat : ( 'breed' '[' a= ID (b= ID )? ']' -> ^( BREED $a ( $b)* ) | 'globals' codeBlock -> ^( GLOBALS codeBlock ) | '__includes' codeBlock -> ^( INCLUDES codeBlock ) | a= ID codeBlock -> ^( OWN $a codeBlock ) | toEndBlock -> toEndBlock | toReportBlock -> toReportBlock );
    public final stat_return stat() throws RecognitionException {
        stat_return retval = new stat_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token a=null;
        Token b=null;
        Token string_literal2=null;
        Token char_literal3=null;
        Token char_literal4=null;
        Token string_literal5=null;
        Token string_literal7=null;
        codeBlock_return codeBlock6 = null;

        codeBlock_return codeBlock8 = null;

        codeBlock_return codeBlock9 = null;

        toEndBlock_return toEndBlock10 = null;

        toReportBlock_return toReportBlock11 = null;


        CommonTree a_tree=null;
        CommonTree b_tree=null;
        CommonTree string_literal2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree char_literal4_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree string_literal7_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_toEndBlock=new RewriteRuleSubtreeStream(adaptor,"rule toEndBlock");
        RewriteRuleSubtreeStream stream_toReportBlock=new RewriteRuleSubtreeStream(adaptor,"rule toReportBlock");
        RewriteRuleSubtreeStream stream_codeBlock=new RewriteRuleSubtreeStream(adaptor,"rule codeBlock");
        try {
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:5: ( 'breed' '[' a= ID (b= ID )? ']' -> ^( BREED $a ( $b)* ) | 'globals' codeBlock -> ^( GLOBALS codeBlock ) | '__includes' codeBlock -> ^( INCLUDES codeBlock ) | a= ID codeBlock -> ^( OWN $a codeBlock ) | toEndBlock -> toEndBlock | toReportBlock -> toReportBlock )
            int alt3=6;
            switch ( input.LA(1) ) {
            case 26:
                {
                alt3=1;
                }
                break;
            case 29:
                {
                alt3=2;
                }
                break;
            case 30:
                {
                alt3=3;
                }
                break;
            case ID:
                {
                alt3=4;
                }
                break;
            case 31:
                {
                alt3=5;
                }
                break;
            case 33:
                {
                alt3=6;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("39:1: stat : ( 'breed' '[' a= ID (b= ID )? ']' -> ^( BREED $a ( $b)* ) | 'globals' codeBlock -> ^( GLOBALS codeBlock ) | '__includes' codeBlock -> ^( INCLUDES codeBlock ) | a= ID codeBlock -> ^( OWN $a codeBlock ) | toEndBlock -> toEndBlock | toReportBlock -> toReportBlock );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:7: 'breed' '[' a= ID (b= ID )? ']'
                    {
                    string_literal2=(Token)input.LT(1);
                    match(input,26,FOLLOW_26_in_stat105); if (failed) return retval;
                    if ( backtracking==0 ) stream_26.add(string_literal2);

                    char_literal3=(Token)input.LT(1);
                    match(input,27,FOLLOW_27_in_stat107); if (failed) return retval;
                    if ( backtracking==0 ) stream_27.add(char_literal3);

                    a=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_stat111); if (failed) return retval;
                    if ( backtracking==0 ) stream_ID.add(a);

                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:25: (b= ID )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==ID) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:0:0: b= ID
                            {
                            b=(Token)input.LT(1);
                            match(input,ID,FOLLOW_ID_in_stat115); if (failed) return retval;
                            if ( backtracking==0 ) stream_ID.add(b);


                            }
                            break;

                    }

                    char_literal4=(Token)input.LT(1);
                    match(input,28,FOLLOW_28_in_stat118); if (failed) return retval;
                    if ( backtracking==0 ) stream_28.add(char_literal4);


                    // AST REWRITE
                    // elements: a, b
                    // token labels: b, a
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_b=new RewriteRuleTokenStream(adaptor,"token b",b);
                    RewriteRuleTokenStream stream_a=new RewriteRuleTokenStream(adaptor,"token a",a);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 39:35: -> ^( BREED $a ( $b)* )
                    {
                        // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:38: ^( BREED $a ( $b)* )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(BREED, "BREED"), root_1);

                        adaptor.addChild(root_1, stream_a.next());
                        // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:39:49: ( $b)*
                        while ( stream_b.hasNext() ) {
                            adaptor.addChild(root_1, stream_b.next());

                        }
                        stream_b.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;
                case 2 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:40:4: 'globals' codeBlock
                    {
                    string_literal5=(Token)input.LT(1);
                    match(input,29,FOLLOW_29_in_stat137); if (failed) return retval;
                    if ( backtracking==0 ) stream_29.add(string_literal5);

                    pushFollow(FOLLOW_codeBlock_in_stat139);
                    codeBlock6=codeBlock();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_codeBlock.add(codeBlock6.getTree());

                    // AST REWRITE
                    // elements: codeBlock
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 40:25: -> ^( GLOBALS codeBlock )
                    {
                        // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:40:28: ^( GLOBALS codeBlock )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(GLOBALS, "GLOBALS"), root_1);

                        adaptor.addChild(root_1, stream_codeBlock.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;
                case 3 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:41:4: '__includes' codeBlock
                    {
                    string_literal7=(Token)input.LT(1);
                    match(input,30,FOLLOW_30_in_stat153); if (failed) return retval;
                    if ( backtracking==0 ) stream_30.add(string_literal7);

                    pushFollow(FOLLOW_codeBlock_in_stat155);
                    codeBlock8=codeBlock();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_codeBlock.add(codeBlock8.getTree());

                    // AST REWRITE
                    // elements: codeBlock
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 41:27: -> ^( INCLUDES codeBlock )
                    {
                        // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:41:30: ^( INCLUDES codeBlock )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(INCLUDES, "INCLUDES"), root_1);

                        adaptor.addChild(root_1, stream_codeBlock.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;
                case 4 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:42:4: a= ID codeBlock
                    {
                    a=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_stat170); if (failed) return retval;
                    if ( backtracking==0 ) stream_ID.add(a);

                    pushFollow(FOLLOW_codeBlock_in_stat172);
                    codeBlock9=codeBlock();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_codeBlock.add(codeBlock9.getTree());

                    // AST REWRITE
                    // elements: codeBlock, a
                    // token labels: a
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_a=new RewriteRuleTokenStream(adaptor,"token a",a);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 42:20: -> ^( OWN $a codeBlock )
                    {
                        // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:42:23: ^( OWN $a codeBlock )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(OWN, "OWN"), root_1);

                        adaptor.addChild(root_1, stream_a.next());
                        adaptor.addChild(root_1, stream_codeBlock.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;
                case 5 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:43:5: toEndBlock
                    {
                    pushFollow(FOLLOW_toEndBlock_in_stat190);
                    toEndBlock10=toEndBlock();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_toEndBlock.add(toEndBlock10.getTree());

                    // AST REWRITE
                    // elements: toEndBlock
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 43:16: -> toEndBlock
                    {
                        adaptor.addChild(root_0, stream_toEndBlock.next());

                    }

                    }

                    }
                    break;
                case 6 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:44:5: toReportBlock
                    {
                    pushFollow(FOLLOW_toReportBlock_in_stat200);
                    toReportBlock11=toReportBlock();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_toReportBlock.add(toReportBlock11.getTree());

                    // AST REWRITE
                    // elements: toReportBlock
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 44:19: -> toReportBlock
                    {
                        adaptor.addChild(root_0, stream_toReportBlock.next());

                    }

                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end stat

    public static class toEndBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start toEndBlock
    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:47:1: toEndBlock : 'to' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end' -> ^( ToEndBlock $a ^( ARGS ( $args)* ) ( $c)* ) ;
    public final toEndBlock_return toEndBlock() throws RecognitionException {
        toEndBlock_return retval = new toEndBlock_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token a=null;
        Token string_literal12=null;
        Token char_literal13=null;
        Token char_literal14=null;
        Token string_literal15=null;
        List list_args=null;
        List list_c=null;
        RuleReturnScope args = null;
        RuleReturnScope c = null;
        CommonTree a_tree=null;
        CommonTree string_literal12_tree=null;
        CommonTree char_literal13_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree string_literal15_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_codeElement=new RewriteRuleSubtreeStream(adaptor,"rule codeElement");
        RewriteRuleSubtreeStream stream_codeLine=new RewriteRuleSubtreeStream(adaptor,"rule codeLine");
        try {
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:2: ( 'to' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end' -> ^( ToEndBlock $a ^( ARGS ( $args)* ) ( $c)* ) )
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:4: 'to' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end'
            {
            string_literal12=(Token)input.LT(1);
            match(input,31,FOLLOW_31_in_toEndBlock214); if (failed) return retval;
            if ( backtracking==0 ) stream_31.add(string_literal12);

            a=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_toEndBlock218); if (failed) return retval;
            if ( backtracking==0 ) stream_ID.add(a);

            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:14: ( '[' (args+= codeElement )+ ']' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==27) ) {
                int LA5_1 = input.LA(2);

                if ( (synpred9()) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:15: '[' (args+= codeElement )+ ']'
                    {
                    char_literal13=(Token)input.LT(1);
                    match(input,27,FOLLOW_27_in_toEndBlock221); if (failed) return retval;
                    if ( backtracking==0 ) stream_27.add(char_literal13);

                    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:19: (args+= codeElement )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( ((LA4_0>=ID && LA4_0<=FLOAT)||LA4_0==26||LA4_0==29||LA4_0==31||(LA4_0>=33 && LA4_0<=34)) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:20: args+= codeElement
                    	    {
                    	    pushFollow(FOLLOW_codeElement_in_toEndBlock226);
                    	    args=codeElement();
                    	    _fsp--;
                    	    if (failed) return retval;
                    	    if ( backtracking==0 ) stream_codeElement.add(args.getTree());
                    	    if (list_args==null) list_args=new ArrayList();
                    	    list_args.add(args);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                    	    if (backtracking>0) {failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    char_literal14=(Token)input.LT(1);
                    match(input,28,FOLLOW_28_in_toEndBlock230); if (failed) return retval;
                    if ( backtracking==0 ) stream_28.add(char_literal14);


                    }
                    break;

            }

            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:47: (c+= codeLine )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ID && LA6_0<=FLOAT)||(LA6_0>=26 && LA6_0<=27)||LA6_0==29||LA6_0==31||(LA6_0>=33 && LA6_0<=34)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:48:48: c+= codeLine
            	    {
            	    pushFollow(FOLLOW_codeLine_in_toEndBlock238);
            	    c=codeLine();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_codeLine.add(c.getTree());
            	    if (list_c==null) list_c=new ArrayList();
            	    list_c.add(c);


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            string_literal15=(Token)input.LT(1);
            match(input,32,FOLLOW_32_in_toEndBlock242); if (failed) return retval;
            if ( backtracking==0 ) stream_32.add(string_literal15);


            // AST REWRITE
            // elements: args, a, c
            // token labels: a
            // rule labels: retval
            // token list labels: 
            // rule list labels: c, args
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_a=new RewriteRuleTokenStream(adaptor,"token a",a);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_c=new RewriteRuleSubtreeStream(adaptor,"token c",list_c);
            RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"token args",list_args);
            root_0 = (CommonTree)adaptor.nil();
            // 48:68: -> ^( ToEndBlock $a ^( ARGS ( $args)* ) ( $c)* )
            {
                // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:49:15: ^( ToEndBlock $a ^( ARGS ( $args)* ) ( $c)* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(ToEndBlock, "ToEndBlock"), root_1);

                adaptor.addChild(root_1, stream_a.next());
                // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:49:31: ^( ARGS ( $args)* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(adaptor.create(ARGS, "ARGS"), root_2);

                // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:49:38: ( $args)*
                while ( stream_args.hasNext() ) {
                    adaptor.addChild(root_2, ((ParserRuleReturnScope)stream_args.next()).getTree());

                }
                stream_args.reset();

                adaptor.addChild(root_1, root_2);
                }
                // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:49:46: ( $c)*
                while ( stream_c.hasNext() ) {
                    adaptor.addChild(root_1, ((ParserRuleReturnScope)stream_c.next()).getTree());

                }
                stream_c.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end toEndBlock

    public static class toReportBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start toReportBlock
    // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:52:1: toReportBlock : 'to-report' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end' -> ^( ToReportBlock $a ^( ARGS ( $args)* ) ( $c)* ) ;
    public final toReportBlock_return toReportBlock() throws RecognitionException {
        toReportBlock_return retval = new toReportBlock_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token a=null;
        Token string_literal16=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token string_literal19=null;
        List list_args=null;
        List list_c=null;
        RuleReturnScope args = null;
        RuleReturnScope c = null;
        CommonTree a_tree=null;
        CommonTree string_literal16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree string_literal19_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_codeElement=new RewriteRuleSubtreeStream(adaptor,"rule codeElement");
        RewriteRuleSubtreeStream stream_codeLine=new RewriteRuleSubtreeStream(adaptor,"rule codeLine");
        try {
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:53:2: ( 'to-report' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end' -> ^( ToReportBlock $a ^( ARGS ( $args)* ) ( $c)* ) )
            // C:\\projects\\netlogo\\grammars\\NetLogoRGW.g:53:4: 'to-report' a= ID ( '[' (args+= codeElement )+ ']' )? (c+= codeLine )* 'end'
            {
            string_literal16=(Token)input.LT(1);
            match(input,33,FOLLOW_33_in_toReportBlock287); if (failed) return retval;
            if ( backtracking==0 ) stream_33.add(string_literal16);
